# nippoa

./: .dockerignore  .env.template  Dockerfile  docker-compose.yml  docker-entrypoint.sh  nippoa.cabal
app/: Main.hs
src/: Index.hs
src/Nippoa/: Record.hs  RecordFactory.hs
src/Nippoa/Record/: Author.hs  TimeStamp.hs  User.hs
src/Nippoa/Value/: TimeStamp.hs  User.hs
src/Sample/: Lib.hs
src/Slack/: Agent.hs  Attachment.hs  Channel.hs  ChannelHistory.hs  ChannelList.hs  ChannelsList.hs  GroupsList.hs  History.hs  Message.hs  Network.hs  Organizer.hs  Profile.hs  User.hs  UsersList.hs
src/Utility/: Base.hs  Regex.hs  Time.hs
test/: IndexSpec.hs  SandboxSpec.hs
test/Nippoa/: RecordFactorySpec.hs  RecordSpec.hs
test/Nippoa/Record/: AuthorSpec.hs  TimeStampSpec.hs  UserSpec.hs
test/Nippoa/Value/: TimeStampSpec.hs  UserSpec.hs
test/Sample/: LibSpec.hs
test/Slack/: AgentSpec.hs  AttachmentSpec.hs  ChannelHistorySpec.hs  ChannelListSpec.hs  ChannelSpec.hs  ChannelsListSpec.hs  GroupsListSpec.hs  HistorySpec.hs  MessageSpec.hs  NetworkSpec.hs  OrganizerSpec.hs  ProfileSpec.hs  UserSpec.hs  UsersListSpec.hs
test/Slack/mock/: ChannelHistory.json  ChannelList.json  GroupsList.json  History.json  UsersList.json
test/Utility/: BaseSpec.hs  RegexSpec.hs  TimeSpec.hs
