name:                nippoa
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/nippoa#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Index
                     , Nippoa.Record
                     , Nippoa.Record.Author
                     , Nippoa.Record.TimeStamp
                     , Slack.GroupsList
                     , Slack.ChannelsList
                     , Slack.Channel
                     , Slack.History
                     , Slack.Message
                     , Slack.Attachment
                     , Slack.UsersList
                     , Slack.User
                     , Slack.Profile
                     , Slack.Agent
                     , Slack.Organizer
                     , Utility.Time
  build-depends:       base >= 4.7 && < 5
                     , http-conduit ==2.1.11
                     , aeson ==0.11.2.0
                     , bytestring ==0.10.6.0
                     , time ==1.5.0.1
                     , regex-compat ==0.95.1
                     , utf8-string ==1.0.1.1
  default-language:    Haskell2010

executable nippoa-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nippoa
  default-language:    Haskell2010

test-suite nippoa-test
  type:                exitcode-stdio-1.0
  main-is:             HSpec.hs
  hs-source-dirs:      test
  ghc-options:         -Wall
  other-modules:       IndexSpec
                     , SandboxSpec
                     , Nippoa.RecordSpec
                     , Nippoa.Record.AuthorSpec
                     , Nippoa.Record.TimeStampSpec
                     , Slack.AttachmentSpec
                     , Slack.ChannelSpec
                     , Slack.ChannelsListSpec
                     , Slack.GroupsListSpec
                     , Slack.HistorySpec
                     , Slack.MessageSpec
                     , Slack.UsersListSpec
                     , Slack.UserSpec
                     , Slack.ProfileSpec
                     , Slack.AgentSpec
                     , Slack.OrganizerSpec
                     , Utility.TimeSpec
  build-depends:       base
                     , hspec ==2.2.3
                     , nippoa
                     , bytestring ==0.10.6.0
                     , filepath ==1.4.0.0
                     , time ==1.5.0.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/namikingsoft/nippoa
